--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        这是一个测试
-    </div>
+    <p>
+        这不一个测试
+    </p>
 </body>
 </html>
